--- a/package.json
+++ b/package.json
@@ -6,20 +6,27 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server",
-    "build": "webpack"
+    "build:dev": "rimraf build && webpack --config webpack.config.js",
+    "build": "rimraf build && webpack --config webpack.config.prod.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^9.7.4",
     "css-loader": "^3.4.2",
+    "file-loader": "^5.0.2",
     "handlebars": "^4.7.2",
     "handlebars-loader": "^1.7.1",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "postcss-loader": "^3.0.0",
+    "rimraf": "^3.0.1",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
+    "webpack-concat-plugin": "^3.0.0",
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
